squish the bugs add the styles

--- a/src/PartyMenu/PartyMenu.css
+++ b/src/PartyMenu/PartyMenu.css
@@ -1,30 +1,19 @@
 .party-header {
-  font-size: 2.5em;
+  font-size: 5em;
+  border : dashed white 3px;
+  /* border-style: ; */
 }
 
 .party-menu {
   font-family: 'PkmnFont';
   text-align: center;
-  background-color: #1e3136;
-  min-height: 100vh;
-  max-height: 100vh;
+  background-color: #b60000;
   max-width: 100vw;
-  color: white;  align-items: center;
+  color: rgb(255, 255, 255); 
+  align-items: center;
   align-self: center;
-
   background-size: contain;
 
-  a:link {
-    color: rgb(2, 204, 2);
-    background-color: transparent;
-    text-decoration: none;
-  }
-
-  a:visited {
-    color: #1e33d3;
-    background-color: transparent;
-    text-decoration: none;
-  }
 }
 
 .pokemon-party-list{
@@ -32,16 +21,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border : dashed white 3px;
 }
 
 .pokemon-party-member {
-  font-size: 1.3em;
-  color: #1e33d3;
+  font-size: 1.8em;
+  display: flex;
+  justify-content: flex-start;
+  color: #ffffff;
   outline: 5px ridge;
   border-radius: 15px;
-  border: 5px ridge rgb(186, 186, 186);
-  background-color: rgba(255,255,255,0.7);
-}
-.App-link {
-  color: #61dafb;
+  margin: 1em;
+  border: 5px ridge rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
 }
